--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -14,6 +14,7 @@
 /* Core CSS */
 @import "minimal-mistakes/reset";
 @import "minimal-mistakes/base";
+@import "minimal-mistakes/custom";
 @import "minimal-mistakes/forms";
 @import "minimal-mistakes/tables";
 @import "minimal-mistakes/animations";
