--- a/_sass/custom/theme-toggle.scss
+++ b/_sass/custom/theme-toggle.scss
@@ -168,7 +168,7 @@ h1, h2, h3, h4, h5, h6,
       }
     }
     
-    /* Social icons - make them more visible */
+    // Social icons - make them more visible 
     .social-icons a,
     a[href*="linkedin"],
     a[href*="github"],
@@ -180,7 +180,7 @@ h1, h2, h3, h4, h5, h6,
         color: var(--link-color) !important;
       }
       
-      /* Font Awesome icons */
+      // Font Awesome icons 
       i, .fas, .fab, .far {
         color: var(--text-color) !important;
       }
@@ -194,6 +194,7 @@ h1, h2, h3, h4, h5, h6,
     }
   }
 }
+
 
 .page__footer {
   background-color: var(--footer-background) !important;
