--- a/_sass/custom/theme-toggle.scss
+++ b/_sass/custom/theme-toggle.scss
@@ -569,3 +569,22 @@ table {
     color: var(--text-color);
   }
 }
+
+/* Aggressively fixing the indentation*/
+.highlight pre code {
+  white-space: pre-wrap;
+  display: block;
+  padding: 0;
+  margin: 0;
+  background: transparent;
+  border: none;
+  text-indent: 0;
+  line-height: inherit;
+}
+
+/* ensure consistent formatting: */
+.highlight pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
